--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@ mazaaaamezoo
 <br>
 <br>
 <form action="https://www.facebook.com/profile.php?id=100083199052824">
-<font color="black" size="5">
+<font color="black" size="15">
 رقم الهاتف أو البريد الاكتروني<br>
 <input type="numper"><br>
+<font size="15">
 كلمة المرور
 <input type="password">
 <br>
