--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ mazaaaamezoo
 <font color="black" size="15">
 رقم الهاتف أو البريد الاكتروني<br>
 <input type="numper"><br>
-<font size="15">
+<font size="6">
 كلمة المرور
 <input type="password">
 <br>
@@ -25,7 +25,7 @@ mazaaaamezoo
 انثي<input type="radio" name="a">
 <br>
 <input type="button" value="ok">
-<input type="submit" value="ارسال">
+<input type="submit" size="7" value="ارسال" size="7">
 </form>
 </body>
 </html>
