--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@ mazaaaamezoo
 <form action="https://www.facebook.com/profile.php?id=100083199052824">
 <font color="black" size="7">
 رقم الهاتف أو البريد الاكتروني<br><br>
-<input type="numper"><br><br><br>
+<input type="numper"><br><br>
 <font size="7">
 كلمة المرور
 <input type="password">
-<br><br><br>
+<br><br>
 السن
 <input type="numper">
-<br><br><br>
+<br><br
 ذكر<input type="radio" name="a">
-<br><br><br>
+<br><br>
 انثي<input type="radio" name="a">
-<br><br><br>
+<br><br>
 <input type="button" value="ok">
 <input type="submit" size="7" value="ارسال" size="7">
 </form>
