--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ mazaaaamezoo
 انثي<input type="radio" name="a">
 <br><br>
 <input type="button" value="ok">
-<input type="submit" size="7" value="ارسال" size="7">
+للارسال اضغط هنا<input type="submit" size="7">
 </form>
 </body>
 </html>
